--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/shahzain-lab/forkify.git"
   },
-  "author": "",
+  "author": "syed.zainUlAbideen",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/shahzain-lab/forkify/issues"
