--- a/package.json
+++ b/package.json
@@ -19,9 +19,17 @@
   },
   "homepage": "https://github.com/shahzain-lab/forkify#readme",
   "devDependencies": {
+    "@babel/core": "^7.14.6",
+    "@babel/preset-env": "^7.14.7",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.2.2",
+    "babel-preset-env": "^1.7.0",
     "html-webpack-plugin": "^5.3.2",
     "webpack": "^5.40.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "babel-polyfill": "^6.26.0"
   }
 }
