--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
     "babel-loader": "^8.2.2",
     "babel-preset-env": "^1.7.0",
     "html-webpack-plugin": "^5.3.2",
+    "process": "^0.11.10",
     "webpack": "^5.40.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "babel-polyfill": "^6.26.0"
+    "babel-polyfill": "^6.26.0",
+    "fractional": "^1.0.0",
+    "uniqid": "^4.1.1"
   }
 }
